# aperturedb-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ci.sh  configure_deployment.sh  fix_censor_tokens.patch  fix_fstrings.py  fix_strings.py  fix_utils.py  github-release.sh  initcommand.sh  osetup.py  postinstall.sh  publish.sh  pyproject.toml  requirements.txt  robots.md  setup.py  shared_setup.py  tag.sh  test.py  version.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: checks.yml  dependencies.yml  develop.yml  main.yaml  main.yml  pr.yaml  pre-commit.yml  release.yaml
aperturedb/: BBoxDataCSV.py  BBoxLoader.py  BlobDataCSV.py  BlobLoader.py  BlobNewestDataCSV.py  Blobs.py  BoundingBoxes.py  CSVParser.py  CSVWriter.py  Clips.py  Collection.py  CommonLibrary.py  Configuration.py  ConnectionDataCSV.py  ConnectionLoader.py  ConnectionPool.py  Connector.py  ConnectorRest.py  Constraints.py  DaskManager.py  DataHelper.py  DataModels.py  DescriptorDataCSV.py  DescriptorLoader.py  DescriptorSetDataCSV.py  DescriptorSetLoader.py  Descriptors.py  Entities.py  EntityDataCSV.py  EntityLoader.py  EntityUpdateDataCSV.py  ImageDataCSV.py  ImageDownloader.py  ImageLoader.py  Images.py  KaggleData.py  KaggleDataset.py  Lock.py  LoggingUtils.py  MLCroissant.py  (+44 more)
aperturedb/OM/: BoundingBox.py  BoundingBoxes.py  Cursor.py  Dataset.py  Entity.py  Image.py  Images.py  Repository.py
aperturedb/cli/: README.md  adb.py  configure.py  generate_images.py  ingest.py  keys.py  mount_coco.py  tokens.py  transact.py  utilities.py
aperturedb/transformers/: __init__.py  adb_image_properties.py  bounding_box_properties.py  clip.py  clip_pytorch_embeddings.py  common_properties.py  facenet.py  facenet_pytorch_embeddings.py  image_properties.py  transformer.py  video_properties.py
deploy/: .gitignore  .terraform.lock.hcl  06 - Polygon Regions.ipynb  aperturedb-python-cc-deployment.yaml  aperturedb-python-cc-ingress.yaml  aperturedb-python-cc-service.yaml  aperturedb-python-docs-deployment.yaml  aperturedb-python-docs-ingress.yaml  aperturedb-python-docs-service.yaml  dockerhub.tf  login-aws.sh  login-docker.sh  login.sh  main.tf  namespace.tf
deploy/modules/service/: main.tf  route53.tf  server.tf
docker/: build_images.sh
docker/complete/: Dockerfile
docker/dependencies/: Dockerfile  build.sh
docker/notebook/: Dockerfile  Dockerfile.cpu
docker/notebook/scripts/: requirements.txt  set_notebook.sh  start.sh
docker/pytorch-gpu/: Dockerfile  build.sh
docker/release/: Dockerfile
docker/tests/: Dockerfile
docker/tests/scripts/: start.sh
docker/twine/: Dockerfile
docs/: README.protobuf  conf.py  gen_docs.sh  index.rst  requirements-documentation.txt
docs/_static/: parallelizer.dot
docs/_static/css/: custom.css
docs/docker/: Dockerfile  build.sh  push_images.sh
examples/: CelebADataKaggle.py  Cifar100DataTensorflow.py  Cifar10DataTensorFlow.py  Cifar10DataTensorflow.py  CocoDataPyTorch.py  CocoDataPytorch.py  ExamplesHelper.py  Foo.py  README.md  dbinfo.py
examples/DataWizard/: 06 - Polygon Regions.ipynb  Polygon Regions DataWizard.ipynb  query.py
examples/dask/: explore.ipynb  ingest_dask.py  ingest_loader.py  ingest_ssh.py
examples/image_classification/: AlexNetClassifier.py  prepare_aperturedb.py  pytorch_classification.ipynb  pytorch_classification.py
examples/loaders_101/: CocoDataPytorch.py  data_loader_hierarchy.py  loaders.ipynb
examples/loading_with_models/: add_video_model.py  find_roi.py  get_tl_embeddings.py  models.ipynb  text_embedding.json  video_clips.json
examples/rest_api/: dbinfo.py  index.html  rest_api.js  rest_api.py
examples/semantic_search/: cohere_wikipedia_ingest.ipynb  cohere_wikipedia_search.ipynb
examples/similarity_search/: CelebADataKaggle.py  ExamplesHelper.py  add_faces.py  facenet.py  similarity_search.ipynb
minimal/: README.md  setup.py
minimal/aperturedb-minimal/: Connector.py  __init__.py  queryMessage_pb2.py
test/: .coveragerc  .dockerignore  .env  adb_timing_tests.py  conftest.py  coverage.sh  dbinfo.py  docker-compose.ci.yml  docker-compose.yml  download_images.py  generateImages.py  generateInput.py  get_10_faces_with_annotations.json  get_10_faces_with_optional_annotations.json  get_10_image_uniqueids.json  get_10_image_uniqueids_either.json  get_10_image_uniqueids_non_null_constraint.json  mark_checker.py  pytest.ini  run_test.sh  run_test_container.sh  test_Base.py  test_CLI.py  test_Configuration.py  test_ConnectionPool.py  test_Data.py  test_Datawizard.py  test_Entities.py  test_Image.py  test_ImageProperties.py  test_Images.py  test_Key.py  test_Loaders.py  test_Operations.py  test_Parallel.py  test_ResponseHandler.py  test_RestVariant.py  test_SPARQL.py  test_Server.py  test_Session.py  (+11 more)
test/aperturedb/: config.json
test/coverage/: Dockerfile
test/input/: README.md  sample_gs_urls  sample_gs_video_urls  sample_http_urls  sample_http_video_urls  sample_s3_urls  sample_s3_video_urls  url_images.adb.csv
test/notebooks/: 06 - Polygon Regions.ipynb
